<resources>
    <string name="app_name">WeatherAppExample</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temp">temp</string>
    <string name="max">max</string>
    <string name="min">min</string>
    <string name="humidity">humidity</string>
    <string name="weather">weather</string>
    <string name="description">description</string>
    <string name="pressure">pressure</string>
    <string name="feels_like">feels like</string>
</resources>