<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.ForecastDetails">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/forecast_temp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/temp" />

    <TextView
        android:id="@+id/max"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/max" />

    <TextView
        android:id="@+id/min"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/min" />

    <TextView
        android:id="@+id/humidity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/humidity" />

    <TextView
        android:id="@+id/weather"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/weather" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/description" />

    <TextView
        android:id="@+id/pressure"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/pressure" />

    <TextView
        android:id="@+id/feels_like"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/feels_like" />

</LinearLayout>